--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=EnterpriseApp
 spring.datasource.url=jdbc:mysql://localhost:3306/enterpriseapp
-spring.datasource.username=root
-spring.datasource.password=rancor
+spring.datasource.username=user
+spring.datasource.password=password
 
 # src/main/resources/application.properties
 jwt.secret=MySuperSecretKeyMySuperSecretKey
